fix(core): align Criteria path-level ops with cb.*, reject silent-wrong operands
Address review findings:
- MEDIUM: Expression.equalTo/notEqualTo(Object) now map null to IS NULL / IS NOT
  NULL and reject Expression right-hand sides; Expression.in(Object.../Collection)
  reject null and Expression elements. Shared CriteriaGuards centralizes the guard
  used by both cb.* factories and path-level convenience methods, so they carry
  identical semantics instead of binding null/CriteriaPath as parameters.
- LOW: entity-returning queries with distinct(true) now fail fast (QuerySpec has no
  DISTINCT; scalar path already honors it) instead of silently dropping the flag.
- LOW(doc): CriteriaQueryImpl/package-info document that HAVING supports grouping
  columns only (aggregate operands unsupported in v1) and the distinct caveat.

Adds unit tests (null->IS NULL, Expression/null operand rejection) and an H2
integration test for entity distinct fail-fast.